*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -42,13 +42,13 @@ Eclipse SDK 3.0 Build - ?th July 2003
 <h2>
 What's new in this drop</h2>
 <ul>
-<li> Added optional compiler diagnosis for predicate method declaring thrown exceptions
+<li> Added optional compiler diagnosis for boolean method declaring thrown exceptions
 (matching problem ID is <code>IProblem.BooleanMethodThrowingException</code>)
 <pre>
 * COMPILER / Reporting Boolean Method Declaring Thrown Exceptions
 *    When enabled, the compiler will issue an error or a warning when a boolean method declaration 
-*    is specifying a clause for thrown exceptions. Usually, predicates should only return
-*    a boolean value and not raise exceptions.
+*    is specifying a clause for thrown exceptions. Some of them are predicates, and these should only 
+*    return a boolean value and not raise exceptions.
 *     - option id:         "org.eclipse.jdt.core.compiler.problem.booleanMethodThrowingException"
 *     - possible values:   { "error", "warning", "ignore" }
 *     - default:           "ignore"
