--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -45,6 +45,8 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38450">38450</a>
+Delete: Removing default package removes source folder 
 
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
