*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -42,6 +42,8 @@ Eclipse SDK 3.0 Build - ?th July 2003
 <h2>
 What's new in this drop</h2>
 <ul>
+<li> Changed Java element delta processing to be thread-safe.
+</li>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
