--- a/www/project_docs.html
+++ b/www/project_docs.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_docs.html,v 1.43 2003/05/27 16:12:48 jmcnally Exp $ -->
+<!-- $Id: project_docs.html,v 1.44 2003/07/08 15:59:47 jmcnally Exp $ -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 
@@ -61,8 +61,8 @@
                 distribution)</li>
                 <li><a href="oracle.html">Using Scarab with Oracle</a></li>
                 <li><a href="postgresql.html">Using Scarab with Postgresql</a></li>
-                <li><a href="mssql.html">Using Scarab with MSSQL</a></li>
-                <li><a href="hypersonic.html">Using Scarab with Hypersonic (not quite working yet)</a></li>
+                <li><a href="mssql.html">Using Scarab with MSSQL (not  working yet)</a></li>
+                <li><a href="hypersonic.html">Using Scarab with Hypersonic (not  working yet)</a></li>
             </ul>
             
             <h3>Nightly tasks</h3>
