--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -47,7 +47,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39766">39766</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39779">39779</a>
+End position of IType exceeds the size of CompilationUnit 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39766">39766</a>
 compilation unit cannot be saved 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39664">39664</a>
 setSuperInterfaces(String[] interfaceNames) API of org.eclipse.jdt.core.jdom.IDOMType interface does not work for an empty array parameter as Input
