--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -47,7 +47,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39467">39467</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39841">39841</a>
+Give better explanation of why abstract class can't be instantiated
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39467">39467</a>
 Classes not implementing abstract methods compile without error
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39763">39763</a>
 Non NLS string is reported and it should not
