*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -42,7 +42,8 @@ Eclipse SDK 3.0 Build - ?th July 2003
 <h2>
 What's new in this drop</h2>
 <ul>
-<li> Added optional diagnosis for unnecessary cast or instanceof operations.
+<li> Added optional diagnosis for unnecessary cast or instanceof operations (matching problem IDs are
+IProblem.UnnecessaryCast, IProblem.UnnecessaryArgumentCast, IProblem.UnnecessaryInstanceof.
 <pre>
 * COMPILER / Reporting Unnecessary Type Check
 *    When enabled, the compiler will issue an error or a warning when a cast or an instanceof operation 
