*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -43,7 +43,7 @@ Eclipse SDK 3.0 Build - ?th July 2003
 What's new in this drop</h2>
 <ul>
 <li> Added optional diagnosis for unnecessary cast or instanceof operations (matching problem IDs are
-IProblem.UnnecessaryCast, IProblem.UnnecessaryArgumentCast, IProblem.UnnecessaryInstanceof.
+<code>IProblem.UnnecessaryCast</code>, <code>IProblem.UnnecessaryArgumentCast</code>, <code>IProblem.UnnecessaryInstanceof</code>).
 <pre>
 * COMPILER / Reporting Unnecessary Type Check
 *    When enabled, the compiler will issue an error or a warning when a cast or an instanceof operation 
