--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -58,7 +58,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39925">39925</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39877">39877</a>
+Rebuild All generates extra "Unable to read classpath" entry. 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39925">39925</a>
 Unnecessary instanceof checking leads to a NullPointerException
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=35442">35442</a>
 flag unnecessary casts
