--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -42,11 +42,15 @@ Eclipse SDK 3.0 Build - ?th July 2003
 <h2>
 What's new in this drop</h2>
 <ul>
-<li></li>
+<li>Added flag <code>IJavaElementDelta.F_PRIMARY_WORKING_COPY</code> that signals that a primary compilation unit has become a
+     working copy, or that a primary working copy has become a compilation unit.
+</li>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39823">39823</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40028">40028</a>
+Deltas and deleted working copies 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39823">39823</a>
 AST: Would like to have binding of Serializable and Clonable
 	  	
 <p><hr><h1>
