*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -36,8 +36,8 @@
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - ?th July 2003 
-<br>Project org.eclipse.jdt.core v_363
+Eclipse SDK 3.0M2 Build - 15th July 2003 
+<br>Project org.eclipse.jdt.core v_363 - 3.0 MILESTONE-2
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_363">cvs</a>).
 <h2>
 What's new in this drop</h2>
@@ -56,7 +56,7 @@ AST: Would like to have binding of Serializable and Clonable
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 14th July 2003 
+Eclipse SDK 3.0M2 Build - 14th July 2003 
 <br>Project org.eclipse.jdt.core v_362
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_362">cvs</a>).
 <h2>
@@ -116,7 +116,7 @@ Delete: Removing default package removes source folder
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 7th July 2003 
+Eclipse SDK 3.0M2 Build - 7th July 2003 
 <br>Project org.eclipse.jdt.core v_361
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_361">cvs</a>).
 <h2>
@@ -171,7 +171,7 @@ Extra error diagnosis in editor from siblings
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 1st July 2003 
+Eclipse SDK 3.0M2 Build - 1st July 2003 
 <br>Project org.eclipse.jdt.core v_360
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_360">cvs</a>).
 <h2>
@@ -258,7 +258,7 @@ Incorrect error reported if extra semi-colon exists on a return statement
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 23rd June 2003 
+Eclipse SDK 3.0M2 Build - 23rd June 2003 
 <br>Project org.eclipse.jdt.core v_359
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_359">cvs</a>).
 <h2>
@@ -321,7 +321,7 @@ SyntaxError- unoptimal syntax error message
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 18th June 2003 
+Eclipse SDK 3.0M2 Build - 18th June 2003 
 <br>Project org.eclipse.jdt.core v_357b
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_357b">cvs</a>).
 <h2>
@@ -338,7 +338,7 @@ IndexManager hangs in end-less loop
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 16th June 2003 
+Eclipse SDK 3.0M2 Build - 16th June 2003 
 <br>Project org.eclipse.jdt.core v_358
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_358">cvs</a>).
 
@@ -605,7 +605,7 @@ bytecode generated for evaluation with parentheses is wrong
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 5th June 2003 - 3.0 MILESTONE-1
+Eclipse SDK 3.0M1 Build - 5th June 2003 - 3.0 MILESTONE-1
 <br>Project org.eclipse.jdt.core v_357
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_357">cvs</a>).
 <h2>
@@ -621,7 +621,7 @@ Deadlock on plugin import
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 4th June 2003 - 3.0 MILESTONE-1
+Eclipse SDK 3.0M1 Build - 4th June 2003
 <br>Project org.eclipse.jdt.core v_356
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_356">cvs</a>).
 <h2>
@@ -637,7 +637,7 @@ Inconsistent output when using comparrisson operators
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 3rd June 2003
+Eclipse SDK 3.0M1 Build - 3rd June 2003
 <br>Project org.eclipse.jdt.core v_355
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_355">cvs</a>).
 <h2>
@@ -660,7 +660,7 @@ Brackets around cast accepted by Eclipse but not javac
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 26th May 2003
+Eclipse SDK 3.0M1 Build - 26th May 2003
 <br>Project org.eclipse.jdt.core v_354
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_354">cvs</a>).
 <h2>
@@ -700,7 +700,7 @@ JDK1.4.2: Wrong declaring class for clone method on array class
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 19th May 2003
+Eclipse SDK 3.0M1 Build - 19th May 2003
 <br>Project org.eclipse.jdt.core v_353
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_353">cvs</a>).
 <h2>
@@ -726,7 +726,7 @@ Compiler does not take care of exclusion filter
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 13th May 2003
+Eclipse SDK 3.0M1 Build - 13th May 2003
 <br>Project org.eclipse.jdt.core v_352
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_352">cvs</a>).
 <h2>
@@ -751,7 +751,7 @@ AST: Wrong source ranges on VariableDeclExpression
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 29th April 2003
+Eclipse SDK 3.0M1 Build - 29th April 2003
 <br>Project org.eclipse.jdt.core v_351
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_351">cvs</a>).
 <h2>
@@ -776,7 +776,7 @@ Compiler should not generate references to classes not on the classpath
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0 Build - 22nd April 2003
+Eclipse SDK 3.0M1 Build - 22nd April 2003
 <br>Project org.eclipse.jdt.core v_350
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_350">cvs</a>).
 <h2>
