*** empty log message ***

--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -36,8 +36,8 @@
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0M2 Build - 15th July 2003 
-<br>Project org.eclipse.jdt.core v_363 - 3.0 MILESTONE-2
+Eclipse SDK 3.0M2 Build - 15th July 2003 - 3.0 MILESTONE-2
+<br>Project org.eclipse.jdt.core v_363 
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_363">cvs</a>).
 <h2>
 What's new in this drop</h2>
