--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -42,8 +42,9 @@ Eclipse SDK 3.0M2 Build - 15th July 2003 - 3.0 MILESTONE-2
 <h2>
 What's new in this drop</h2>
 <ul>
-<li>Added flag <code>IJavaElementDelta.F_PRIMARY_WORKING_COPY</code> that signals that a primary compilation unit has become a
-     working copy, or that a primary working copy has become a compilation unit.
+<li>Added flag <code>IJavaElementDelta.F_PRIMARY_WORKING_COPY</code> that signals that a compilation unit has become a
+     primary working copy, or that a primary working copy has reverted to a compilation unit (i.e. primary working copies are not notified
+     as being added/removed like other working copies, since the primary unit is only changing mode, also see bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40028">40028</a>).
 </li>
 </ul>
 
