--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -45,7 +45,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39865">39865</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36479">36479</a>
+Rename operation during refactoring fails 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39865">39865</a>
 Misleading error diagnosis on broken method signatures
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=12800">12800</a>
 suboptimal error messages on mistyped 'throw/throws' keywords 
