--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -36,28 +36,21 @@
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0M3 Build - ?th July 2003
+Eclipse SDK 3.0M2 Build - 16th July 2003 - 3.0 MILESTONE-2
 <br>Project org.eclipse.jdt.core v_364 
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_364">cvs</a>).
 <h2>
 What's new in this drop</h2>
 <ul>
 </ul>
-
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36479">36479</a>
-Rename operation during refactoring fails 
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=39865">39865</a>
-Misleading error diagnosis on broken method signatures
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=12800">12800</a>
-suboptimal error messages on mistyped 'throw/throws' keywords 
-<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38568">38568</a>
-Search for method declarations fooled by array types 
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40210">40210</a>
+ICompilationUnit#isWorkingCopy() misbehaving for discarded working copies
 
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0M2 Build - 15th July 2003 - 3.0 MILESTONE-2
+Eclipse SDK 3.0M2 Build - 15th July 2003
 <br>Project org.eclipse.jdt.core v_363 
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_363">cvs</a>).
 <h2>
