--- a/www/documentation/index.html
+++ b/www/documentation/index.html
@@ -1,4 +1,4 @@
-<!-- $Id: index.html,v 1.34 2003/07/04 06:20:40 linus Exp $ -->
+<!-- $Id: index.html,v 1.35 2003/07/17 22:23:09 linus Exp $ -->
 <html>
 
 <head>
@@ -17,8 +17,7 @@ content="ArgoUML, Argo, UML, Unified Modeling Language, modeling, modelling, Gen
 <li>A <a href="defaulthtml/quick-guide/">Quick Guide</a>
 on how to get started.
 <li>The <a href="defaulthtml/manual/">User Manual</a>
-    (<a href="defaulthtml/manual/">[HTML]</a> | 
-    <a href="pdf/manual/argomanual.pdf">[pdf]</a>).
+    (pdf version available with release).
 <li>A <a href="/tours/">tour</a> through ArgoUML.
     This tour gives you a nice impression of the concepts of ArgoUML and what it can do.
 Note. The tour might contain some small differences from the current version of ArgoUML.
