--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -42,10 +42,16 @@ Eclipse SDK 3.0M3 Build - ?th July 2003
 <h2>
 What's new in this drop</h2>
 <ul>
+<li>Fix for bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40116">40116</a>
+     requires the index format to be changed. Indexes will be automatically regenerated upon
+     subsequent search queries (accounting for indexing notification in search progress dialogs).
+</li>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40334">40334</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40116">40116</a>
+Search for references to nested class doesn't find anything 
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40334">40334</a>
 Model should be more tolerant for possible compiler failures
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=36479">36479</a>
 Rename operation during refactoring fails 
