Corrected misprint noticed by Slobodan Mumovic <slobodan.mumovic@seavus.com>.

--- a/www/mssql.html
+++ b/www/mssql.html
@@ -6,7 +6,7 @@
 <body bgcolor="#ffffff">
 
 <h2>Scarab - MSSQL</h2>
-<h4>$Id: mssql.html,v 1.2 2003/07/08 15:56:29 jmcnally Exp $</h4>
+<h4>$Id: mssql.html,v 1.3 2003/07/18 18:28:22 dlr Exp $</h4>
 
 <p>
 Scarab has been developed with database independence in mind, however
@@ -43,7 +43,7 @@ scarab.database.admin.username=${scarab.database.username}
 scarab.database.admin.password=${scarab.database.password}
 scarab.database.manual.creation=true
 
-2. Edit the <scarab>/src/etc/TurbineResources.properties file:
+2. Edit the <scarab>/src/conf/TurbineResources.properties file:
         2.1. comment out the following lines (this is important):
         #torque.dsfactory.scarab.factory=\
         #  org.apache.torque.dsfactory.Jdbc2PoolDataSourceFactory
