--- a/www/mssql.html
+++ b/www/mssql.html
@@ -6,7 +6,7 @@
 <body bgcolor="#ffffff">
 
 <h2>Scarab - MSSQL</h2>
-<h4>$Id: mssql.html,v 1.3 2003/07/18 18:28:22 dlr Exp $</h4>
+<h4>$Id: mssql.html,v 1.4 2003/07/18 18:30:36 dlr Exp $</h4>
 
 <p>
 Scarab has been developed with database independence in mind, however
@@ -19,9 +19,10 @@ href="mailto:dev@scarab.tigris.org">Community feedback</a> on this
 document will help improve things for others.
 </p>
 
-<p>The following instructions were supplied by Slobodan Mumovic who says
-the one of the problems was the default jdbc connection pool configuration
-does not work with MSSQL.</p>
+<p>The following instructions were supplied by Slobodan Mumovic who
+says the one of the problems was the default JDBC connection pool
+configuration does not work with MSSQL.  For the following to be
+effective, you must have the MS SQL JDBC driver available.</p>
 
 <pre>
 1. Override the default build properties by creating and editing the
