--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -42,6 +42,16 @@ Eclipse SDK 3.0M3 Build - ?th July 2003
 <h2>
 What's new in this drop</h2>
 <ul>
+<li> Added optional diagnosis for undocumented empty blocks
+<pre>
+* COMPILER / Reporting Undocumented Empty Block
+*    When enabled, the compiler will issue an error or a warning when an empty block is detected and it is not
+*    documented with any comment.
+*     - option id:         "org.eclipse.jdt.core.compiler.problem.undocumentedEmptyBlock"
+*     - possible values:   { "error", "warning", "ignore" }
+*     - default:           "ignore"
+</pre>
+</li>
 <li> Removed optional diagnosis for boolean methods throwing exception, since it proved to be useless as is.
 </li>
 <li>Fix for bug <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40116">40116</a>
