Remove reference to struts-template.

--- a/web/example/tour.htm
+++ b/web/example/tour.htm
@@ -66,9 +66,9 @@ RegistrationForm.java</a>
   <li><a href="#Summary">Summary</a></li>
 </ul>
 <hr>
-<p>The standard Struts package comes with four applications: struts-test,
-struts-documentation, struts-template, and struts-example. Regarding
-struts-example, the readme
+<p>The standard Struts package comes with six applications: struts-test,
+struts-documentation, tiles-documentation, struts-validator, struts-upload,
+and struts-example. Regarding struts-example, the readme
 tells us that:</p>
 <blockquote>
 <p>&quot;This example is the beginnings of a portal application that would allow
