--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -61,7 +61,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=32285">32285</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40421">40421</a>
+Unnecessary cast warning...true but...
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=32285">32285</a>
 DCR - extra java compiler markers
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40514">40514</a>
 ArrayIndexOutOfBoundsException during detection of unnecessary casts
