--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -36,7 +36,7 @@
 <p><hr><h1>
 Eclipse Platform Build Notes&nbsp;<br>
 Java Development Tooling Core</h1>
-Eclipse SDK 3.0M3 Build - ?th July 2003
+Eclipse SDK 3.0M3 Build - 22nd July 2003
 <br>Project org.eclipse.jdt.core v_365 
 (<a href="http://dev.eclipse.org/viewcvs/index.cgi/org.eclipse.jdt.core/?only_with_tag=v_365">cvs</a>).
 <h2>
@@ -61,7 +61,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40322">40322</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40572">40572</a>
+Unnecessary cast warning for necessary cast
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40322">40322</a>
 Error creating new Java projects 
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40421">40421</a>
 Unnecessary cast warning...true but...
