Fixed broken links in Javadoc

--- a/src/share/org/apache/struts/taglib/bean/package.html
+++ b/src/share/org/apache/struts/taglib/bean/package.html
@@ -402,7 +402,7 @@ Bean Tags Reference</a>
 <p><em>Render A Bean or Bean Property</em> - The contents of a bean, or bean 
 property, are converted to a String and then copied to the response currently 
 being created.  This tag understands the syntax for simple, nested, and indexed
-property references described <a href="#doc.Properties.Reference"> above</a>
+property references described <a href="#doc.Properties.References"> above</a>
 .  Beans from any scope can be requested - by default, the scopes are searched
 in expanding visibility order (page, request, session, and application) to
 locate the requested bean.</p>
