--- a/src/share/org/apache/struts/tiles/package.html
+++ b/src/share/org/apache/struts/tiles/package.html
@@ -43,6 +43,7 @@
 <p>This example inserts the specified page in place of the tag. The page attribute is any valid URL pointing to a resource inside the current site.</p>
 </div>
 <div class="subsection1">
+<a name="doc.InsertPageWithAttributes">
 <h3>Insert a Tiles passing some attributes</h3>
 <pre>
 &lt;tiles:insert page="/layouts/classicLayout.jsp" flush="true"&gt;
@@ -108,7 +109,7 @@
 &lt;/html&gt;
 </pre>
       <p>The layout is declared in a JSP page (ex: /layouts/classicLayout.jsp). 
-        It can be used in conjunction with the tag described in "<a href="#_Insert_a_page_passing some attribut">Insert 
+        It can be used in conjunction with the tag described in "<a href="#doc.InsertPageWithAttributes">Insert 
         a page passing some attributes</a>". </p>
 </div>
 </div>
