--- a/www/project_members.html
+++ b/www/project_members.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_members.html,v 1.15 2002/07/19 22:41:00 jon Exp $ --> 
+<!-- $Id: project_members.html,v 1.16 2003/07/29 16:31:07 dlr Exp $ --> 
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
@@ -34,6 +34,7 @@ join the developer's <a href="/servlets/ProjectMailingListList">mailing list</a>
 
 <ul>
     <li>Who you are</li>
+    <li>A link to a picture, if ya have one</li>
     <li>Your interest in Issue Tracking</li>
     <li>The role you would like to play in the project (e.g., do you want to just 
         discuss ideas, write code, do UI design, or be an early users?), and</li>
