--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -45,7 +45,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40839">40839</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40474">40474</a>
+DOM/AST: Add API to parse only part of a compilation
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40839">40839</a>
 Deprecation is reported even if there is an empty member declaration prior to the field declaration
 <br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40606">40606</a>
 Unable to discard empty package if containing .class files 
