* www/development.html Added a section on developing with an IDE. * www/development_ide.html Start of guidelines for developers attempting to provide developer support for an IDE. * www/development_eclipse.html Basically a placeholder to put suggestions about using Eclipse/Websphere Studio.

--- a/www/development.html
+++ b/www/development.html
@@ -142,10 +142,23 @@ List issueIdList = (List) user.getTemp(ScarabConstants.ISSUE_ID_LIST);
 <div><code>build.compiler=jikes</code></div>
 </p>
 
+<h3>Working with an IDE</h3>
+
+<p>While it is not necessary to use a GUI IDE to develop Scarab,
+there is a lot of value in having the Scarab CVS distribution be IDE-ready.
+Facilitating easy development of Scarab with a GUI IDE should go a long way
+towards helping new developers get up to speed.
+<!-- Nice quote, Dan -->
+</p>
+<p>
+At this point, the integration of <a href="http://eclipse.org">Eclipse</a>
+is just beginning.
+As the integration expands, guidelines and additional information
+will be available <a href="development_ide.html">here</a>.
 
 <hr noshade="true" size="1"/>
 
-<p>$Id: development.html,v 1.4 2003/04/30 17:02:04 dlr Exp $</p>
+<p>$Id: development.html,v 1.5 2003/07/30 14:57:08 thierrylach Exp $</p>
 
 </body>
 </html>
