* www/project_docs.html Added a link to the IDE Development page.

--- a/www/project_docs.html
+++ b/www/project_docs.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_docs.html,v 1.44 2003/07/08 15:59:47 jmcnally Exp $ -->
+<!-- $Id: project_docs.html,v 1.45 2003/07/30 15:06:00 thierrylach Exp $ -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 
@@ -99,6 +99,7 @@
                 <li><a href="bug_trackers.html">Information on other Issue/Bug Tracking tools</a></li>
                 <li><a href="jakarta-deps.html">Building Jakarta dependencies for Scarab</a></li>
                 <li><a href="mysql-internationalization.html">MySQL Internationalization Issues</a></li>
+                <li><a href="development_ide.html">Using a GUI IDE to Develop Scarab</a></li>
             </ul>
             
             <p>To get involved, please read our <a
