--- a/buildnotes_jdt-core.html
+++ b/buildnotes_jdt-core.html
@@ -45,7 +45,9 @@ What's new in this drop</h2>
 </ul>
 
 <h3>Problem Reports Fixed</h3>
-<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38633">38633</a>
+<a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=41019">41019</a>
+org.eclipse.jdt.core.Signature cannot resolve complex type that has package name starting with letters as any primitive type
+<br><a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=38633">38633</a>
 Search should not open requested types with match locator parser
 <a href="http://bugs.eclipse.org/bugs/show_bug.cgi?id=40954">40954</a>
 ArrayIndexOutOfBoundsException during sort members
